# moumy-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
src/: main.rs  recipe.rs  server.rs  store.rs  updater.rs
src/frontend/: app.js  index.html  styles.css
