[package]
name = "moumy-editor"
version = "0.1.0"
edition = "2021"
description = "Recipe editor for Moumy's handwritten recipes"
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"
walkdir = "2"
